# lp_nn_robustness_verification

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  INSTALL.md  LICENSE  README.md  all-requirements.txt  dev-requirements.txt  docs-requirements.txt  examples-requirements.txt  pyproject.toml  release-requirements.txt  requirements.txt
docs/: conf.py  example_scripts.rst  examples.rst  ilp_nn_robustness_verification.data_acquisition.rst  ilp_nn_robustness_verification.ilp.rst  ilp_nn_robustness_verification.optimize.rst  ilp_nn_robustness_verification.pre_processing.rst  ilp_nn_robustness_verification.type_aliases.rst  index.rst  lp_nn_robustness_verification.data_acquisition.rst  lp_nn_robustness_verification.data_types.rst  lp_nn_robustness_verification.linear_program.rst  lp_nn_robustness_verification.optimize.rst  lp_nn_robustness_verification.pre_processing.rst  lp_nn_robustness_verification.timing.rst
src/ilp_nn_robustness_verification/: data_types.py  ilp.py  optimize.py  pre_processing.py
src/ilp_nn_robustness_verification/data_acquisition/: activation_functions.py  uncertain_inputs.py
src/lp_nn_robustness_verification/: data_types.py  linear_program.py  optimize.py  pre_processing.py  timing.py
src/lp_nn_robustness_verification/data_acquisition/: activation_functions.py  generate_nn_params.py  uncertain_inputs.py
src/lp_nn_robustness_verification/examples/: data_types.py  find_seeds_and_samples.py  linear_inclusion.ipynb  optimize.py  solve_instances_in_parallel.py  solve_one_instance.py  timing_evaluation.ipynb
tests/: conftest.py  test_examples.py  test_generate_nn_params.py  test_ilp.py  test_linear_program.py  test_pre_processing.py  test_timing.py  test_uncertain_inputs.py
